--- a/practice.html
+++ b/practice.html
@@ -3,4 +3,7 @@
     <head>
         <title>This is stash example</title>
     </head>
+    <body>
+        <p>create temp file which you don't want to commit</p>
+    </body>
 </html>
