--- a/practice.html
+++ b/practice.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <p>create temp file which you don't want to commit</p>
+        <p>hello this is visual studio</p>
     </body>
 </html>
